articles about story

--- a/app/index.html
+++ b/app/index.html
@@ -285,7 +285,7 @@
 								<p class="video_item_header">
 									Как появился баскетбол в России?
 								</p>
-								<a href="404.html" class="more">
+								<a href="articles/story.html" class="more">
 									<img src="img/book_ico.png" alt="#" class="magnifier_ico">
 									<span>
 										ЧИТАТЬ
@@ -333,7 +333,7 @@
 								<p class="video_item_header">
 									Как появился баскетбол в России?
 								</p>
-								<a href="404.html" class="more">
+								<a href="articles/story.html" class="more">
 									<img src="img/book_ico.png" alt="#" class="magnifier_ico">
 									<span>
 										ЧИТАТЬ
@@ -381,7 +381,7 @@
 								<p class="video_item_header">
 									Как появился баскетбол в России?
 								</p>
-								<a href="404.html" class="more">
+								<a href="articles/story.html" class="more">
 									<img src="img/book_ico.png" alt="#" class="magnifier_ico">
 									<span>
 										ЧИТАТЬ
