articles about facts

--- a/app/index.html
+++ b/app/index.html
@@ -269,7 +269,7 @@
 							<p class="video_item_header">
 								Интересные факты о баскетболе
 							</p>
-							<a href="404.html" class="more">
+							<a href="articles/facts.html" class="more">
 								<img src="img/book_ico.png" alt="#" class="magnifier_ico">
 								<span>
 									ЧИТАТЬ
@@ -317,7 +317,7 @@
 							<p class="video_item_header">
 								Интересные факты о баскетболе
 							</p>
-							<a href="404.html" class="more">
+							<a href="articles/facts.html" class="more">
 								<img src="img/book_ico.png" alt="#" class="magnifier_ico">
 								<span>
 									ЧИТАТЬ
@@ -365,7 +365,7 @@
 							<p class="video_item_header">
 								Интересные факты о баскетболе
 							</p>
-							<a href="404.html" class="more">
+							<a href="articles/facts.html" class="more">
 								<img src="img/book_ico.png" alt="#" class="magnifier_ico">
 								<span>
 									ЧИТАТЬ
