add social to all pages

--- a/app/train_team.html
+++ b/app/train_team.html
@@ -40,7 +40,14 @@
 </head>
 
 <body class="is_trainer">
-
+	<div class="social_block">
+		<a href="https://www.instagram.com/spartak_spb_women/" target="_blank" class="social_link_fixed vk">
+			<img src="img/instagram_logo.png" class="img-responsive" alt="#">
+		</a>
+		<a href="https://vk.com/spartak_spb_woman" target="_blank" class="social_link_fixed instagram">
+			<img src="img/vk_logo.png" class="img-responsive" alt="#">
+		</a>
+	</div>
 	<!-- Custom HTML -->
 	<header class="page_header">
 
