add Contact page

--- a/app/contacts.html
+++ b/app/contacts.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 
 <head>
-	<base href="/">
+
 	<meta charset="utf-8">
 
 	<title>СПАРТАК | ЖЕНСКИЙ БАСКЕТБОЛЬНЫЙ КЛУБ</title>
@@ -12,7 +12,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 	<!-- Template Basic Images Start -->
-	<meta property="og:image" content="new_sezonge.jpg">
+	<meta property="og:image" content="path/to/image.jpg">
 	<link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
 	<link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-icon-72x72.png">
@@ -39,7 +39,7 @@
 
 </head>
 
-<body class="is_article">
+<body class="is_contacts">
 	<div class="social_block">
 		<a href="https://www.instagram.com/spartak_spb_women/" target="_blank" class="social_link_fixed vk">
 			<img src="img/instagram_logo.png" class="img-responsive" alt="#">
@@ -71,7 +71,7 @@
 							<!-- <a href="http://www.gazprom.ru/" class="sponsor_link">
 								<img src="img/gazprom_logo_sm.png" alt="gazprom">
 							</a>
-							<a href="#" class="sponsor_link">
+							<a href="https://www.raiffeisen.ru/" class="sponsor_link">
 								<img src="img/raiffezen_logo_sm.png" alt="raiffezen">
 							</a> -->
 							<div class="lang_block">
@@ -82,8 +82,8 @@
 						<div class="nav_line">
 							<a href="404.html" class="nav_item">НОВОСТИ</a>
 							<a href="404.html" class="nav_item">КАЛЕНДАРЬ ИГР</a>
-							<a href="squad.html" class="nav_item">СОСТАВ</a>
-							<a href="train_team.html" class="nav_item">ТРЕНЕРСКИЙ ШТАБ</a>
+							<a href="squad.html" class="nav_item ">СОСТАВ</a>
+							<a href="train_team.html" class="nav_item ">ТРЕНЕРСКИЙ ШТАБ</a>
 							<a href="404.html" class="nav_item">АРЕНА</a>
 							<a href="contacts.html" class="nav_item">КОНТАКТЫ</a>
 						</div>
@@ -94,15 +94,36 @@
 		</div>
 
 
-		<div class="main_article" style="background-image: url(img/articles_img/story/main_bg.jpg);">
+		<div class="main_article" style="background-image: url(img/contact_img/contact_bg.png);">
 			<div class="overlay_accent">
+				<div class="contact_overlay"></div>
 				<div class="container">
-					<div class="row">
-						<div class="col-lg-6 col-md-8">
-							<a href="#" class="tag">КЛУБ</a>
-							<p class="section_header">
-								Как появился баскетбол в России?
-							</p>
+					<div class="row justify-content-center">
+						<div class="col-md-6">
+							<h2 class="contact_page_header">КОНТАКТЫ</h2>
+						</div>
+						<div class="col-md-6">
+
+							<div class="contact_item">
+								<img src="img/contact_img/placeholder-filled-point.png" alt="#" class="contact_item_ico">
+								<a href="https://www.google.com.ua/maps/place/%D0%9C%D0%B5%D1%82%D1%80%D0%BE%D0%BF%D0%BE%D0%BB%D0%B8%D1%81+%D0%90%D1%80%D0%B5%D0%BD%D0%B0/@59.916112,30.39184,15z/data=!4m5!3m4!1s0x0:0xb1cd5ae8834f8110!8m2!3d59.916112!4d30.39184" class="contact_item_text">г.Санкт-Петербург, Глиняная 5/1,  Метрополис Арена</a>
+							</div>
+							<div class="contact_item">
+								<img src="img/contact_img/phone.png" alt="#" class="contact_item_ico">
+								<a href="tel:8(812)2060201" class="contact_item_text">8 (812) 206 02 01</a>
+							</div>
+							<div class="contact_item">
+								<img src="img/contact_img/email.png" alt="#" class="contact_item_ico">
+								<a href="mailto:Anozbkspartak@yandex.ru" class="contact_item_text">Anozbkspartak@yandex.ru</a>
+							</div>
+							<div class="contact_item">
+								<img src="img/contact_img/vk.png" alt="#" class="contact_item_ico">
+								<a href="https://vk.com/spartak_spb_woman" class="contact_item_text">https://vk.com/spartak_spb_woman</a>
+							</div>
+							<div class="contact_item">
+								<img src="img/contact_img/insta.png" alt="#" class="contact_item_ico">
+								<a href="https://instagram.com/spartak_spb_women" class="contact_item_text">instagram.com/spartak_spb_women</a>
+							</div>
 
 						</div>
 					</div>
@@ -110,90 +131,6 @@
 			</div>
 		</div>
 	</header>
-	<section class="matches">
-		<div class="last_news owl-carousel owl-theme">
-
-			<div class="last_news_item">
-				<img src="img/last_news_ico/1.png" alt="#" class="last_news_img">
-				<div class="last_news_descr">
-					<p class="last_news_tag">ПОСЛЕДНИЕ НОВОСТИ</p>
-					<p class="last_news_header">
-						Первый бой - он трудный самый
-					</p>
-					<a href="articles/posledniy_boi.html" class="more">
-						<img src="img/magnifier_ico.png" alt="#" class="magnifier_ico">
-						<span>
-							ПОДРОБНЕЕ
-						</span>
-					</a>
-				</div>
-			</div>
-
-			<div class="last_news_item">
-				<img src="img/last_news_ico/2.png" alt="#" class="last_news_img">
-				<div class="last_news_descr">
-					<p class="last_news_tag">КЛУБ</p>
-					<p class="last_news_header">
-						Наш президент - наша гордость!
-					</p>
-					<a href="articles/nash_prezident.html" class="more">
-						<img src="img/magnifier_ico.png" alt="#" class="magnifier_ico">
-						<span>
-							ПОДРОБНЕЕ
-						</span>
-					</a>
-				</div>
-			</div>
-
-			<div class="last_news_item">
-				<img src="img/last_news_ico/3.png" alt="#" class="last_news_img">
-				<div class="last_news_descr">
-					<p class="last_news_tag">ПОСЛЕДНИЕ НОВОСТИ</p>
-					<p class="last_news_header">
-						Турнир 3х3 памяти имени А.П.Бурчика
-					</p>
-					<a href="articles/turnir_3na3.html" class="more">
-						<img src="img/magnifier_ico.png" alt="#" class="magnifier_ico">
-						<span>
-							ПОДРОБНЕЕ
-						</span>
-					</a>
-				</div>
-			</div>
-
-
-
-		</div>
-
-		</div>
-		<div class="container">
-			<div class="decor_rect"></div>
-			<div class="row">
-				<div class="article_date">
-					<span class="date_day">
-						12 октября 2018
-					</span>
-					<br>
-					<span class="date_time">15.00</span>
-				</div>
-				<div class="article_content">
-					<p class="article_bold">
-						Как появился Баскетбол в России?
-					</p>
-					<div class="article_images">
-						<img src="img/articles_img/story/1.jpg" alt="">
-						<img src="img/articles_img/story/2.jpg" alt="">
-					</div>
-					<p class="article_bold">А вы знали, что городом зарождения баскетбола в России является наш Петербург?</p>
-					<p>Именно в нашем городе  в 1906 году гимнасты из спортивного общества "Маяк" создали первые баскетбольные команды.</p>
-					<p>До Октябрьской революции 1917г. эта игра культивировалась  только в столице России - Петербурге</p>
-					<p>Новая жизнь баскетбола в России начинается в начале двадцатых годов.</p>
-				</div>
-
-			</div>
-		</div>
-	</section>
-
 
 	<footer class="footer">
 		<div class="container">
@@ -233,7 +170,6 @@
 			</div>
 		</div>
 	</footer>
-
 	<script src="js/scripts.min.js"></script>
 
 </body>
