--- a/app/404.html
+++ b/app/404.html
@@ -78,7 +78,7 @@
 							<a href="squad.html" class="nav_item">СОСТАВ</a>
 							<a href="train_team.html" class="nav_item">ТРЕНЕРСКИЙ ШТАБ</a>
 							<a href="#" class="nav_item">АРЕНА</a>
-							<a href="#" class="nav_item">КОНТАКТЫ</a>
+							<a href="contacts.html" class="nav_item">КОНТАКТЫ</a>
 						</div>
 
 					</nav>
