--- a/app/index.html
+++ b/app/index.html
@@ -86,7 +86,7 @@
 							<a href="squad.html" class="nav_item">СОСТАВ</a>
 							<a href="train_team.html" class="nav_item">ТРЕНЕРСКИЙ ШТАБ</a>
 							<a href="404.html" class="nav_item">АРЕНА</a>
-							<a href="404.html" class="nav_item">КОНТАКТЫ</a>
+							<a href="contacts.html" class="nav_item">КОНТАКТЫ</a>
 						</div>
 
 					</nav>
