--- a/app/404.html
+++ b/app/404.html
@@ -74,7 +74,7 @@
 						</div>
 						<div class="nav_line">
 							<a href="#" class="nav_item">НОВОСТИ</a>
-							<a href="#" class="nav_item">КАЛЕНДАРЬ ИГР</a>
+							<a href="calendar.html" class="nav_item">КАЛЕНДАРЬ ИГР</a>
 							<a href="squad.html" class="nav_item">СОСТАВ</a>
 							<a href="train_team.html" class="nav_item">ТРЕНЕРСКИЙ ШТАБ</a>
 							<a href="#" class="nav_item">АРЕНА</a>
