--- a/app/index.html
+++ b/app/index.html
@@ -82,7 +82,7 @@
 						</div>
 						<div class="nav_line">
 							<a href="404.html" class="nav_item">НОВОСТИ</a>
-							<a href="404.html" class="nav_item">КАЛЕНДАРЬ ИГР</a>
+							<a href="calendar.html" class="nav_item">КАЛЕНДАРЬ ИГР</a>
 							<a href="squad.html" class="nav_item">СОСТАВ</a>
 							<a href="train_team.html" class="nav_item">ТРЕНЕРСКИЙ ШТАБ</a>
 							<a href="404.html" class="nav_item">АРЕНА</a>
@@ -95,16 +95,16 @@
 		</div>
 
 
-		<div class="main_article" style="background-image: url(img/main_article_bg_lg.jpg);">
+		<div class="main_article" style="background-image: url(img/articles_img/first_sezon_games/main.jpg);">
 			<div class="overlay_accent">
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-6 col-md-8">
 							<a href="404.html" class="tag">КЛУБ</a>
 							<p class="section_header">
-								ПЕРВЫЙ БОЙ - ОН ТРУДНЫЙ САМЫЙ!
+								Первые игры сезона
 							</p>
-							<a href="articles/posledniy_boi.html" class="more">
+							<a href="articles/first_sezon_games.html" class="more">
 								<img src="img/magnifier_ico.png" alt="#" class="magnifier_ico">
 								<span>
 									ПОДРОБНЕЕ
@@ -120,13 +120,13 @@
 		<div class="last_news owl-carousel owl-theme">
 
 			<div class="last_news_item">
-				<img src="img/last_news_ico/1.png" alt="#" class="last_news_img">
+				<img src="img/last_news_ico/4.png" alt="#" class="last_news_img">
 				<div class="last_news_descr">
 					<p class="last_news_tag">ПОСЛЕДНИЕ НОВОСТИ</p>
 					<p class="last_news_header">
-						Первый бой - он трудный самый
+						Молодость и Опыт. Первый выезд "Спартака"
 					</p>
-					<a href="articles/posledniy_boi.html" class="more">
+					<a href="articles/first_game.html" class="more">
 						<img src="img/magnifier_ico.png" alt="#" class="magnifier_ico">
 						<span>
 							ПОДРОБНЕЕ
@@ -136,13 +136,13 @@
 			</div>
 
 			<div class="last_news_item">
-				<img src="img/last_news_ico/2.png" alt="#" class="last_news_img">
+				<img src="img/last_news_ico/5.png" alt="#" class="last_news_img">
 				<div class="last_news_descr">
-					<p class="last_news_tag">КЛУБ</p>
+					<p class="last_news_tag">ПОСЛЕДНИЕ НОВОСТИ</p>
 					<p class="last_news_header">
-						Наш президент - наша гордость!
+							матч против команды ЧЁРНЫЕ МЕДВЕДИ
 					</p>
-					<a href="articles/nash_prezident.html" class="more">
+					<a href="articles/game_2.html" class="more">
 						<img src="img/magnifier_ico.png" alt="#" class="magnifier_ico">
 						<span>
 							ПОДРОБНЕЕ
@@ -152,13 +152,13 @@
 			</div>
 
 			<div class="last_news_item">
-				<img src="img/last_news_ico/3.png" alt="#" class="last_news_img">
+				<img src="img/last_news_ico/6.png" alt="#" class="last_news_img">
 				<div class="last_news_descr">
 					<p class="last_news_tag">ПОСЛЕДНИЕ НОВОСТИ</p>
 					<p class="last_news_header">
-						Турнир 3х3 памяти имени А.П.Бурчика
+							матч против команды Инвента-Фарм
 					</p>
-					<a href="articles/turnir_3na3.html" class="more">
+					<a href="articles/game_3.html" class="more">
 						<img src="img/magnifier_ico.png" alt="#" class="magnifier_ico">
 						<span>
 							ПОДРОБНЕЕ
@@ -166,8 +166,6 @@
 					</a>
 				</div>
 			</div>
-
-
 
 		</div>
 
