--- a/app/squad.html
+++ b/app/squad.html
@@ -81,7 +81,7 @@
 						</div>
 						<div class="nav_line">
 							<a href="404.html" class="nav_item">НОВОСТИ</a>
-							<a href="404.html" class="nav_item">КАЛЕНДАРЬ ИГР</a>
+							<a href="calendar.html" class="nav_item">КАЛЕНДАРЬ ИГР</a>
 							<a href="squad.html" class="nav_item active">СОСТАВ</a>
 							<a href="train_team.html" class="nav_item">ТРЕНЕРСКИЙ ШТАБ</a>
 							<a href="404.html" class="nav_item">АРЕНА</a>
