friday/new article

--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
 
 	<meta charset="utf-8">
 
-	<title>СПАРТАК | ЖЕНСКИЙ БАСКЕТБОЛЬНЫЙ КЛУБ</title>
+	<title>СПАРТАК | ЖЕНСКИЙ БАСКЕТБОЛЬНЫЙ КЛУБ </title>
 	<meta name="description" content="">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -118,6 +118,21 @@
 	</header>
 	<section class="matches">
 		<div class="last_news owl-carousel owl-theme">
+			<div class="last_news_item">
+				<img src="img/last_news_ico/7.jpg" alt="#" class="last_news_img">
+				<div class="last_news_descr">
+					<p class="last_news_tag">ПОСЛЕДНИЕ НОВОСТИ</p>
+					<p class="last_news_header">
+							СПАРТАК VS ДИНАМО-2
+					</p>
+					<a href="articles/spartak_vs_dinamo-2.html" class="more">
+						<img src="img/magnifier_ico.png" alt="#" class="magnifier_ico">
+						<span>
+							ПОДРОБНЕЕ
+						</span>
+					</a>
+				</div>
+			</div>
 
 			<div class="last_news_item">
 				<img src="img/last_news_ico/4.png" alt="#" class="last_news_img">
@@ -151,21 +166,7 @@
 				</div>
 			</div>
 
-			<div class="last_news_item">
-				<img src="img/last_news_ico/6.png" alt="#" class="last_news_img">
-				<div class="last_news_descr">
-					<p class="last_news_tag">ПОСЛЕДНИЕ НОВОСТИ</p>
-					<p class="last_news_header">
-							матч против команды Инвента-Фарм
-					</p>
-					<a href="articles/game_3.html" class="more">
-						<img src="img/magnifier_ico.png" alt="#" class="magnifier_ico">
-						<span>
-							ПОДРОБНЕЕ
-						</span>
-					</a>
-				</div>
-			</div>
+
 
 		</div>
 
