--- a/app/calendar.html
+++ b/app/calendar.html
@@ -226,7 +226,8 @@
 										<p class="team_name">СПАРТАК</p>
 									</div>
 									<div class="match_points">
-										<span class="t1_point">0</span> <span class="divider">:</span> <span class="t2_point">0</span>
+										<span class="t1_point">74</span> <span class="divider">:</span> <span class="t2_point">34</span><br>
+										<span class="t1_point">67</span> <span class="divider">:</span> <span class="t2_point">75</span>
 									</div>
 									<div class="team_logo">
 										<img src="img/enisey.png" alt="#" class="team_img">
