--- a/app/index.html
+++ b/app/index.html
@@ -188,7 +188,8 @@
 							<p class="team_name">СПАРТАК</p>
 						</div>
 						<div class="match_points">
-							<span class="t1_point">0</span> <span class="divider">:</span> <span class="t2_point">0</span>
+							<span class="t1_point">86</span> <span class="divider">:</span> <span class="t2_point">79</span><br>
+							<span class="t1_point">78</span> <span class="divider">:</span> <span class="t2_point">80</span>
 						</div>
 						<div class="team_logo">
 							<img src="img/shahta_logo.png" alt="#" class="team_img">
@@ -207,7 +208,8 @@
 							<p class="team_name">СПАРТАК</p>
 						</div>
 						<div class="match_points">
-							<span class="t1_point">0</span> <span class="divider">:</span> <span class="t2_point">0</span>
+							<span class="t1_point">86</span> <span class="divider">:</span> <span class="t2_point">43</span><br>
+							<span class="t1_point">40</span> <span class="divider">:</span> <span class="t2_point">46</span>
 						</div>
 						<div class="team_logo">
 							<img src="img/iventa.png" alt="#" class="team_img">
@@ -226,7 +228,8 @@
 							<p class="team_name">СПАРТАК</p>
 						</div>
 						<div class="match_points">
-							<span class="t1_point">0</span> <span class="divider">:</span> <span class="t2_point">0</span>
+							<span class="t1_point">51</span> <span class="divider">:</span> <span class="t2_point">58</span><br>
+							<span class="t1_point">63</span> <span class="divider">:</span> <span class="t2_point">73</span>
 						</div>
 						<div class="team_logo">
 							<img src="img/black_bears.png" alt="#" class="team_img">
@@ -431,7 +434,7 @@
 						<div class="last_game_card card">
 							<div class="card_header">
 								<p>ПОСЛЕДНЯЯ ИГРА</p>
-								<a href="404.html" class="more more_card">
+								<a href="calendar.html" class="more more_card">
 									<img src="img/magnifier_ico.png" alt="#" class="magnifier_ico">
 									<span>
 										ИСТОРИЯ МАТЧЕЙ
